nivasa-macros/tests/trybuild/validation_is_url_invalid.stderr
error: expected a string field for `#[is_url]`
 --> tests/trybuild/validation_is_url_invalid.rs:5:5
  |
5 |     #[is_url]
  |     ^
